# py-humble

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: update_rss.yml
docs/: books.rss  games.rss  index.html  software.rss
py_humble/: __init__.py  feed_generator.py  parser.py  scraper.py
tests/: test_py_humble.py
