[tool.poetry]
name = "py-humble"
version = "0.1.0"
description = ""
authors = ["Nils Müller <shimst3r@gmail.com>"]
readme = "README.md"
packages = [{ include = "py_humble" }]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
feedgen = "^0.9.0"
requests = "^2.31.0"
pendulum = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
pyhumble = 'py_humble:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
